# race-service

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  specification.yaml
.github/workflows/: deploy_webserver.yml  test.yml
race_service/: app.py  gunicorn_config.py
race_service/adapters/: __init__.py  events_adapter.py  race_results_adapter.py  raceplans_adapter.py  races_adapter.py  start_entries_adapter.py  startlists_adapter.py  time_events_adapter.py  users_adapter.py
race_service/commands/: __init__.py  exceptions.py  raceplans_commands.py  raceplans_individual_sprint.py  raceplans_interval_start.py  startlists_commands.py  startlists_next_round.py
race_service/models/: __init__.py  changelog.py  race_model.py  raceplan_model.py  startlist_model.py  time_event_model.py
race_service/services/: __init__.py  exceptions.py  race_results_service.py  raceplans_service.py  races_service.py  start_entries_service.py  startlists_service.py  time_events_service.py
race_service/utils/: db_utils.py  jwt_utils.py
race_service/views/: __init__.py  liveness.py  race_results.py  raceplans.py  raceplans_commands.py  races.py  start_entries.py  startlists.py  startlists_commands.py  time_events.py  utils.py
src/event_service/: app.py
src/event_service/adapters/: __init__.py  adapter.py  ageclasses_adapter.py  contestants_adapter.py  events_adapter.py  users_adapter.py
src/event_service/commands/: __init__.py  contestants_commands.py  events_commands.py
src/event_service/models/: __init__.py  ageclass_model.py  contestant_model.py  event_model.py
src/event_service/services/: __init__.py  ageclasses_service.py  contestants_service.py  events_service.py  exceptions.py
src/event_service/views/: __init__.py  ageclasses.py  contestants.py  contestants_commands.py  events.py  events_commands.py
src/race_service/: app.py
src/race_service/adapters/: __init__.py  events_adapter.py  race_results_adapter.py  raceplans_adapter.py  races_adapter.py  start_entries_adapter.py  startlists_adapter.py  time_events_adapter.py  timeevents_adapter.py  users_adapter.py
src/race_service/commands/: __init__.py  exceptions.py  raceplans_commands.py  raceplans_individual_sprint.py  raceplans_interval_start.py  startlists_commands.py
src/race_service/models/: __init__.py  changelog.py  race_model.py  raceplan_model.py  startlist_model.py  time_event_model.py  timeevent_model.py
src/race_service/services/: __init__.py  race_results_service.py  raceplans_service.py  races_service.py  start_entries_service.py  startlists_service.py  time_events_service.py  timeevents_service.py
src/race_service/views/: __init__.py  liveness.py  race_results.py  raceplans.py  raceplans_commands.py  races.py  start_entries.py  utils.py  (+4 more)
tests/: conftest.py
tests/contract/: __init__.py  test_ageclasses.py  test_contestants.py  test_generate_ageclasses_on_event.py  test_generate_plan_for_event.py  test_generate_raceplan_for_event.py  test_generate_raceplan_for_event_individual_sprint.py  test_generate_raceplan_for_event_individual_sprint_multiple_finals.py  test_generate_raceplan_for_event_interval_start.py  test_generate_startlist_for_event_individual_sprint.py  test_generate_startlist_for_event_interval_start.py  test_race_results.py  test_raceclasses.py  test_raceplans.py  test_startlists.py  test_time_events.py  test_timeevents.py  utils.py
tests/files/: .~lock.contestants_all_333.csv#  J11_expected_raceplan_individual_sprint.json  README.md  all_contestants_eventid_364892.csv  all_expected_raceplan_individual_sprint.json  competition_format.json  competition_format_individual_sprint.json  competition_format_individual_sprint_multiple_finals_1.json  competition_format_individual_sprint_multiple_finals_2.json  competition_format_interval_start.json  contestants_G11_10.csv  contestants_G11_7.csv  contestants_J10_17.csv  contestants_J11_17.csv  contestants_all.csv  contestants_eventid_364892.csv  contestants_eventid_364892_no_minidrett_id.csv  event.json  event_individual_sprint.json  event_interval_start.json  expected_raceplan.json  expected_raceplan_individual_sprint.json  expected_raceplan_individual_sprint_G11_10.json  expected_raceplan_individual_sprint_G11_7.json  expected_raceplan_individual_sprint_J10.json  expected_raceplan_individual_sprint_J11.json  expected_raceplan_individual_sprint_multiple_finals_1.json  expected_raceplan_individual_sprint_multiple_finals_2.json  expected_raceplan_interval_start.json  expected_startlist_individual_sprint.json  expected_startlist_interval_start.json
tests/integration/: __init__.py  test_ageclasses.py  test_assign_bibs_to_contestants.py  test_contestants.py  test_events.py  test_events_adapter.py  test_generate_ageclasses_on_event.py  test_generate_raceplan.py  test_generate_raceplan_for_event.py  test_generate_raceplan_for_individual_sprint.py  test_generate_raceplan_for_individual_sprint_non_ranked.py  test_generate_raceplan_for_individual_sprint_ranked.py  test_generate_raceplan_for_interval_start.py  test_generate_startlist.py  test_generate_startlist_for_individual_sprint.py  test_generate_startlist_for_interval_start.py  test_ping.py  test_race_results.py  test_raceplans.py  test_races.py  test_ready.py  test_start_entries.py  test_startlist_raceplan.py  test_startlists.py  test_time_events.py  test_timeevents.py
tests/unit/: __init__.py  test_calculate_raceplans_individual_sprint_non_ranked.py  test_calculate_raceplans_individual_sprint_ranked.py  test_calculate_raceplans_individual_sprint_ranked_multiple_finals.py  test_calculate_raceplans_interval_start.py  test_event_service.py  test_generate_startlist_for_individual_sprint.py  test_generate_startlist_for_individual_sprint_not_ranked.py  test_generate_startlist_for_interval_start.py  test_raceplans_commands.py  test_raceplans_individual_sprint.py  test_raceplans_individual_sprint_non_ranked.py  test_raceplans_individual_sprint_ranked.py  test_raceplans_individual_sprint_ranked_multiple_finals.py  test_raceplans_interval_start.py
(+8 files in other folders)
